# sp1

./: rust-toolchain
.github/actions/setup/: action.yml
.github/workflows/: eval.yml  main.yml  pr.yml
core/: Cargo.toml
core/benches/: main.rs
core/src/: lib.rs
core/src/air/: builder.rs
core/src/cpu/: trace.rs
core/src/operations/field/: field_op.rs
core/src/runtime/: memory.rs  mod.rs  record.rs  syscall.rs  utils.rs
core/src/stark/: air.rs  chip.rs  machine.rs  permutation.rs  prover.rs
core/src/syscall/: debug.rs  marker.rs  memcpy.rs  mod.rs  write.rs
core/src/syscall/precompiles/: mod.rs
core/src/syscall/precompiles/bn254_scalar/: add.rs  general_field_op.rs  mac.rs  mod.rs  mul.rs
core/src/utils/: config.rs  programs.rs  prove.rs
core/src/utils/ec/weierstrass/: bn254.rs
crates/core/executor/: Cargo.toml
crates/core/executor/src/: executor.rs  record.rs
crates/core/executor/src/events/: memcpy.rs  mod.rs
crates/core/executor/src/syscalls/: code.rs  mod.rs
crates/core/machine/src/: lib.rs
crates/core/machine/src/cpu/: trace.rs
crates/core/machine/src/riscv/: cost.rs  mod.rs  shape.rs
crates/core/machine/src/runtime/: syscall.rs  utils.rs
crates/core/machine/src/syscall/: memcpy.rs  mod.rs
crates/core/machine/src/utils/: prove.rs
crates/cuda/src/: lib.rs
crates/curves/src/: lib.rs
crates/curves/src/weierstrass/: bn254.rs  grumpkin.rs  mod.rs
crates/prover/: Cargo.toml
crates/prover/src/: lib.rs  shapes.rs
crates/recursion/gnark-ffi/: Cargo.toml
crates/recursion/gnark-ffi/go/sp1/: build.go
crates/sdk/src/: lib.rs
crates/sdk/src/provers/: cuda.rs
crates/stark/src/lookup/: debug.rs
crates/zkvm/entrypoint/: Cargo.toml
crates/zkvm/entrypoint/src/: lib.rs  memcpy.c  memcpy.s
crates/zkvm/entrypoint/src/syscalls/: bn254.rs  mod.rs
crates/zkvm/lib/src/: lib.rs
examples/add/program/: Cargo.toml
examples/add/program/elf/: riscv32im-succinct-zkvm-elf
examples/add/program/src/: main.rs
examples/add/script/: Cargo.toml
examples/add/script/src/: main.rs
examples/poseidon_bn254/program/: Cargo.toml
examples/poseidon_bn254/program/elf/: riscv32im-succinct-zkvm-elf
examples/poseidon_bn254/program/src/: main.rs
examples/poseidon_bn254/script/: Cargo.toml
examples/poseidon_bn254/script/src/: main.rs
prover/src/: lib.rs
recursion/circuit/src/: constraints.rs  stark.rs
recursion/core/src/memory/: air.rs
recursion/core/src/poseidon2/: external.rs
recursion/gnark-ffi/: Cargo.toml
recursion/gnark-ffi/go/sp1/: build.go
recursion/program/src/: reduce.rs
sdk/: Cargo.toml
tests/bn254-scalar-arith/: Cargo.toml
tests/bn254-scalar-arith/elf/: riscv32im-succinct-zkvm-elf
tests/bn254-scalar-arith/src/: main.rs
zkvm/entrypoint/src/: memcpy.c
zkvm/entrypoint/src/syscalls/: bn254.rs  marker.rs  mod.rs
zkvm/lib/src/: lib.rs
zkvm/precompiles/src/: lib.rs
(+17 files in other folders)
