[workspace]
[package]
version = "0.1.0"
name = "add-script"
edition = "2021"

[dependencies]
# sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
sp1-sdk = { path = "../../../sdk" }

[build-dependencies]
# sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
sp1-helper = { path = "../../../helper" }
